fix(index.ts): added custom z-index value

--- a/packages/layer-inpicture-sdk/src/css/slider.sass
+++ b/packages/layer-inpicture-sdk/src/css/slider.sass
@@ -21,7 +21,6 @@
         font-family: SB Sans Text, sans-serif
         overflow: hidden
         pointer-events: none
-        z-index: 2147483640
 
     &-swiper-container
         position: absolute
